{
    "name": "GameControlls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "75ca2e87-9936-4e17-a241-cf917c78bd2a",
            "actions": [
                {
                    "name": "MovementWASD",
                    "type": "Value",
                    "id": "a0279718-ea2d-457d-9742-6ba7399711f1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotating",
                    "type": "PassThrough",
                    "id": "6e4a123b-d9d3-41c5-82ca-34dbd094ec91",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ESC",
                    "type": "Button",
                    "id": "92f1bc2c-105d-4f48-95e9-374977afe05f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "bf9e39b2-8389-48ea-a48d-b13a85469221",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "47703afa-c8dd-4d2e-9af0-f055c6339fb0",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementWASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "220985c7-7cbd-47f7-ae1e-ed994ef7c66e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "24109ce4-0023-4a7f-8c56-29a6afdfba51",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "fafaeb2a-01f8-4a32-b8f1-3d10777b0955",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "ca213c11-f1e1-458f-bad9-358ef29b6ff6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementWASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b5a49344-d69e-4358-98b1-366630b924b5",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotating",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11e88872-2dda-4f9c-b586-da1d9925c1fe",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ESC",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "3D Vector",
                    "id": "7413e24f-8f0a-480f-95ba-46ebfd241347",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "c65dc3bc-a740-4cd2-a081-0abfb9bb582f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9e029e75-250a-49c3-9456-70244893d97d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "f74a973e-24cc-4928-9d51-6a540ab73883",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "00b5e07b-8b71-41ba-98aa-017075ffe5f2",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Menu",
            "id": "524ffc6e-425f-469d-87b6-3e245d84751c",
            "actions": [
                {
                    "name": "NextCharacter",
                    "type": "Button",
                    "id": "288a953d-1bfe-465b-817c-035aeffe3de7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevCharacter",
                    "type": "Button",
                    "id": "38e3a9d8-1577-4cd4-b76f-3015039af78d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "81a2434d-2b28-4051-9125-a5aed8f15e2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdf0ecce-db91-435b-aabf-cc42e48a12e9",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1ee0b81-65f1-491a-90dc-b63fc2d6cd27",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cccf71b-6f55-4788-96bd-d98ff4573232",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c54fe3b-8afc-4e02-8fc6-44d8326b5dd5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ca6e37e-5299-4a94-9149-c2ca2259a321",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41338b04-88d5-43c8-9bfa-a0e838cbae28",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}